--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,6 +3,5 @@
     let year = d.getFullYear();
 %>
 <footer>
-    <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
-    <a class="error-link" href="/inv/server-error">Error Link</a>
+    <p class="copyright">&copy; <%= year %>, CSE 499 Senior Project</p>
 </footer>
