--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%- title%> | CSE 340 App</title>
+    <title><%- title%> | CSE 499 Senior Project</title>
     <link rel="stylesheet" href="/css/styles.css" media="screen">
     <link rel="icon" href="/images/site/favicon-32x32.png" sizes="32x32">
 </head>
