--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -86,6 +86,20 @@ nav a:hover {
   background-color: var(--accent1-color);
 }
 
+button {
+  margin: 0 1rem;
+  padding: 0.5rem;
+  background-color: var(--primary-color);
+  color: var(--accent1-color);
+  cursor: pointer;
+  font-size: 1rem;
+  border-radius: 5px;
+}
+button:hover {
+  background-color: var(--accent1-color);
+  color: var(--primary-color);
+}
+
 /* HERO */
 .hero {
   width: 100%;
@@ -121,17 +135,6 @@ nav a:hover {
 }
 .hero-card h2 {
   margin: 0.5rem 0;
-}
-.hero-card button {
-  margin: 0 1rem;
-  padding: 0.5rem;
-  background-color: var(--primary-color);
-  color: var(--accent1-color);
-  cursor: pointer;
-}
-.hero-card button:hover {
-  background-color: var(--accent1-color);
-  color: var(--primary-color);
 }
 
 .hero-card-details {
