--- a/views/partials/join.ejs
+++ b/views/partials/join.ejs
@@ -1,25 +1,29 @@
 <section id="join-section" class="form-wrapper">
-    <h2>Welcome to "Your Point Is?"</h2>
+    <% if (isOwner) { %>
+        <h2>Welcome to your room</h2>
+    <% } else { %>
+        <h2>Welcome to the room</h2>
+    <% } %>
     <p>Enter your name and click the Join Room button to begin the estimation session</p>
     <label for="join-name">Name:
-        <input type="text" id="join-name" placeholder="John Smith">
+        <input type="text" id="join-name" placeholder="John Smith" value="<%= displayName %>">
     </label>
     <button id="join-button" class="button">Join Room</button>
 </section>
 
 <script>
-  document.getElementById('join-button').addEventListener('click', () => {
-    const name = document.getElementById('join-name').value;
+  document.getElementById("join-button").addEventListener("click", () => {
+    const name = document.getElementById("join-name").value;
     if (name) {
-      console.log('Join room name: ' + name);
+      console.log("Join room name: " + name);
       joinRoom(name);
     }
   });
 
   function hideJoin() {
-    const section = document.getElementById('join-section');
+    const section = document.getElementById("join-section");
     if (section) {
-      section.style.display = 'none';
+      section.style.display = "none";
     }
   }
 </script>
