31: adding new logo and favicon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <picture>
             <source media="(max-width: 564px)" srcset="/images/welcome-sm.webp" type="image/webp">
             <source media="(min-width: 565px)" srcset="/images/welcome-lg.webp" type="image/webp">
-            <img src="/images/welcome-sm.jpg" alt="Your Point Is" />
+            <img src="/images/welcome-sm.webp" alt="Your Point Is" />
         </picture>
         <div class="hero-card">
             <h2>Your Point Is</h2>
