--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('../partials/head') %>
-<body>
-    <div id="wrapper">
-        <%- include('../partials/header') %>
-        <hr>
-        <main>
-            <%- body %>
-        </main>
-
-        <%- include('../partials/footer') %>
-    </div>
+<body class="bg-light">
+    <%- include('../partials/header') %>
+    <main class="container my-4">
+        <%- body %>
+    </main>
+    <%- include('../partials/footer') %>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
