--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,6 +2,6 @@
     const d = new Date();
     let year = d.getFullYear();
 %>
-<footer>
-    <p class="copyright">&copy; <%= year %>, CSE 499 Senior Project</p>
+<footer class="bg-dark text-light mt-2 text-center py-3">
+    <p class="copyright m-0">&copy; <%= year %>, CSE 499 Senior Project</p>
 </footer>
