--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,6 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%- title%> | CSE 499 Senior Project</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css" media="screen">
-    <link rel="icon" href="/images/site/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" href="/images/site/icon_3.png" sizes="32x32">
 </head>
