--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <%- include('../partials/head') %>
 <body>
+    <%- include('../partials/navigation.ejs') %>
     <div id="wrapper">
         <%- include('../partials/header') %>
         <hr>
