21: create voted partial. wire it up with fake data

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,419 +23,6 @@ body
   font-family: "Jost", sans-serif !important;
 }
 
-/* body {
-  font-family: "Montserrat", sans-serif;
-  font-size: .7em;
-  color: var(--primary-color);
-  background-size: 465px 450px;
+.hidden {
+  display: none;
 }
-
-#wrapper {
-  padding: 1rem;
-  max-width: 900px;
-  background-color: var(--subtle-color);
-} */
-
-/* HEADER */
-/* header {
-  padding: 1rem 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-}
-
-.site-name a {
-  font-size: 2em;
-  color: var(--primary-color);
-  text-decoration: none;
-  font-weight: bold;
-}
-
-#tools {
-  justify-self: right;
-  text-wrap: nowrap;
-}
-.a-button {
-  padding: 0.3rem 0.8rem;
-  color: var(--primary-color);
-  background-color: var(--accent1-color);
-  text-decoration: none;
-  border: 1px solid var(--primary-color);
-  border-radius: 5px;
-}
-.a-button {
-  color: var(--accent1-color);
-  background-color: var(--primary-color);
-} */
-
-/* NAVIGATION */
-/* nav {
-}
-
-nav ul {
-  margin: 0;
-  padding: 10px;
-  list-style-type: none;
-  background-color: var(--primary-color);
-  display: flex;
-  justify-content: space-around;
-}
-
-nav li {
-  display: block;
-}
-
-nav a {
-  text-decoration: none;
-  color: var(--accent1-color);
-  background-color: var(--primary-color);
-}
-
-nav a:hover {
-  color: var(--primary-color);
-  background-color: var(--accent1-color);
-} */
-
-/* HERO */
-/* .hero {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.hero-content {
-  width: 100%;
-  position: relative;
-  display: flex;
-  min-height: 200px;
-  align-items: center;
-}
-
-.hero-content picture {
-  width: 100%;
-}
-.hero-content picture img {
-  width: 100%;
-  height: auto;
-  padding: 0 5rem;
-} */
-
-/* .hero-card {
-  padding: 0 0.5rem 0.5rem 0.5rem;
-  position: absolute;
-  left: 0;
-  bottom: 2rem;
-  background-color: var(--backdrop-color);
-  color: var(--accent1-color);
-  display: flex;
-  flex-direction: column;
-}
-.hero-card h2 {
-  margin: 0.5rem 0;
-} */
-/* .hero-card button {
-  margin: 0 1rem;
-  padding: 0.5rem;
-  background-color: var(--primary-color);
-  color: var(--accent1-color);
-  cursor: pointer;
-} */
-/* .hero-card button:hover {
-  background-color: var(--accent1-color);
-  color: var(--primary-color);
-} */
-
-/* .hero-card-details {
-  padding-bottom: 0.5rem;
-}
-.hero-card-details span {
-  padding: 0.15rem;
-  display: block;
-}
- */
-/* DETAILS */
-/* .details-container {
-  display: flex;
-  flex-wrap: wrap;
-  grid-gap: 1rem;
-  justify-content: center;
-}
-
-.details-container section {
-  width: 320px;
-}
-
-.details-upgrades-thumbs {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.details-upgrades-thumbs figure {
-  margin: 0 0.25rem 0.5rem 0.25rem;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  width: 150px;
-}
-
-.details-upgrades-thumbs figure div {
-  padding: 0.25rem;
-  width: 100%;
-  background-color: var(--accent1-color);
-  border: 2px solid var(--primary-color);
-}
-
-.details-upgrades-thumbs figure img {
-  width: auto;
-  height: 80px;
-}
-
-.details-upgrades-thumbs figcaption {
-  padding-top: 0.25rem;
-}
-
-.details-reviews li {
-  padding: 0.5rem 0;
-}
-
-#inv-display {
-  list-style-type: none;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-}
-
-#inv-display li {
-  margin: 10px;
-}
-
-#inv-display li a {
-  height: 100px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
-
-.namePrice a {
-  height: unset !important;
-  color: var(--primary-color);
-  text-decoration: none;
-}
-
-.namePrice a:hover {
-  background-color: var(--accent1-color);
-  text-decoration: none;
-}
-
-.vehicle h2 {
-  margin: 0.5rem 0 0;
-}
-
-.vehicle span {
-  font-weight: bold;
-  padding-right: 0.5rem;
-}
-
-.vehicle img {
-  width: 100%;
-  height: auto;
-}
-
-.error-link {
-  text-decoration: none;
-  color: var(--primary-color);
-  padding: 5px 10px;
-}
-
-.error-link:hover {
-  background-color: var(--accent1-color);
-  border: 1px solid var(--primary-color);
-}
-
-.notice {
-  color: #f00;
-  font-style: italic;
-}
-
-.form-wrapper {
-  border: 1px solid var(--primary-color);
-  background-color: var(--accent1-color);
-  border-radius: 0.5rem;
-  padding: 1rem;
-}
-
-.form-wrapper label {
-  display: block;
-  font-size: 0.9rem;
-  font-weight: bold;
-}
-
-.form-wrapper input, select {
-  height: 1.75rem;
-  margin-bottom: 1rem;
-  width: 100%;
-  font-size: 0.9rem;
-} */
-
-/* .form-wrapper button {
-  margin: 0 auto;
-  display: block;
-  padding: 0.2rem 0.8rem;
-} */
-
-/* .login-no-content {
-  text-align: center;
-  padding: 1rem 0 0.5rem;
-}
-
-.fields-are-required {
-  font-size: 0.8rem;
-  font-style: italic;
-  text-transform: uppercase;
-}
-
-.register-form form {
-  margin: 1rem;
-  padding: 1rem;
-  border: 1px solid var(--primary-color);
-}
-
-.register-form p {
-  font-size: 0.8rem;
-}
-
-.validating-form input:focus:invalid {
-  background-color: #fdd;
-}
-
-.validating-form input:focus:required:valid {
-  background-color: #dfd;
-}
-
-.inv-management {
-  padding: 1rem 0;
-  display: flex;
-  flex-direction: column;
-  row-gap: 1rem;
-  align-items: center;
-}
-
-.inv-management a {
-  padding: 0.5rem 1rem;
-  color: var(--accent1-color);
-  background-color: var(--primary-color);
-  border: 1px solid var(--primary-color);
-  border-radius: 5px;
-  font-size: 0.8rem;
-  text-decoration: none;
-  text-align: center;
-  text-wrap: nowrap;
-  width: 70%;
-}
-
-.inv-management a:hover {
-  color: var(--primary-color);
-  background-color: var(--accent1-color);
-  border-color: var(--primary-color);
-}
-
-#addClassificationForm {
-  padding-top: 0.5rem;
-} */
-
-/* FEATURED */
-/* .featured-wrapper {
-  display: flex;
-  row-gap: 1rem;
-  flex-direction: column;
-  align-items: center;
-}
-
-.featured-vehicle {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 0.25rem;
-}
-
-.feature-available {
-  color: var(--backdrop-color);
-  text-align: center;
-} */
-
-/* LARGER SCREENS */
-/* @media (min-width: 565px) {
-  body {
-    font-size: unset;
-    background-image: url("/images/site/checkerboard.jpg");
-  }
-
-  #wrapper {
-    margin: 1rem auto;
-    border: 5px solid var(--primary-color);
-    border-radius: 10px;
-  }
-
-  .hero-content picture img {
-    margin: 0 auto;
-    padding: 0 7rem;
-  }
-
-  .hero-card {
-    left: 2rem;
-    bottom: 3rem;
-  }
-
-  .details-reviews li {
-    font-size: 1.25rem;
-  }
-
-  .details-container {
-    padding: 2rem 0 0 0;
-    flex-direction: row-reverse;
-  }
-
-  .details-container section {
-    width: 400px;
-  }
-
-  .details-upgrades-thumbs figure {
-    width: 190px;
-  }
-
-  .vehicle {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .vehicle div {
-    padding: 0 0.5rem;
-  }
-
-  .form-wrapper {
-    margin: 0 auto;
-    width: 50%;
-  }
-
-  .register-form {
-    margin: 0 auto;
-    width: 60%;
-  }
-
-  .inv-management a {
-    padding: 0.5rem 1rem;
-    color: var(--accent1-color);
-    background-color: var(--primary-color);
-    border: 1px solid var(--primary-color);
-    border-radius: 5px;
-    font-size: 0.8rem;
-    text-decoration: none;
-    text-align: center;
-    width: 40%;
-  }
-
-  .featured-wrapper {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  }
-} */
