--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,7 +3,7 @@
 <%- include('../partials/head') %>
 <body class="bg-light">
     <%- include('../partials/header') %>
-    <main class="container my-4">
+    <main class="main p-3">
         <%- body %>
     </main>
     <%- include('../partials/footer') %>
