--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('../partials/head') %>
-<body class="bg-light">
+<body class="bg-light d-flex flex-column min-vh-100">
     <%- include('../partials/header') %>
-    <main class="container my-4">
+    <main class="container my-4 flex-grow-1">
         <%- body %>
     </main>
     <%- include('../partials/footer') %>
