--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,12 @@
   <div class="container d-flex justify-content-between align-items-center">
       <a href="/" title="Return to home page"><img src="/images/site/logo_your_point_is_3.png" alt="Your Point Is Logo" class="img-fluid" style="max-height: 80px;"></a>
       <% if (loggedIn) {%>
+        <div class="d-flex align-items-center"">
+          <a class="btn btn-outline-primary me-2" href="/dashboard/">Dashboard</a>
+          <form action="/dashboard/" method="POST">
+            <button type="submit" class="btn btn-outline-primary me-2">Create Room</button>
+          </form>
+        </div>
       <div>
         <span class="m-2"><%=loggedIn.displayName%></span>| 
         <a class="btn btn-outline-danger ms-2" title="Click to log out" href="/auth/logout">Logout</a>
