--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,5 +11,6 @@
   />
   <link rel="stylesheet" href="/css/styles.css" media="screen" />
   <link rel="stylesheet" href="/css/cards-styles.css" media="screen" />
+  <link rel="stylesheet" href="/css/waiting-styles.css" media="screen" />
   <link rel="icon" href="/images/site/icon_3.png" sizes="32x32" />
 </head>
