fixing Responsiveness Waiting Stage

--- a/public/css/waiting-styles.css
+++ b/public/css/waiting-styles.css
@@ -6,3 +6,11 @@
   justify-content: center; /* Vertical center (optional) */
   text-align: center;
 }
+
+#imagepizzawrapper {
+  width: 100%;
+}
+
+#pizza {
+  max-width: 100%;
+}
