--- a/views/partials/waiting.ejs
+++ b/views/partials/waiting.ejs
@@ -4,7 +4,7 @@
     <input id="linkToShare" value="<%= location%>" readonly />
     <button id="buttonToCopy" onclick="copyText()">📋 Copy</button>
   </div>
-  <div>
+  <div id="imagepizzawrapper">
     <img
       id="pizza"
       src="/images/waitingPage/pizza1.jpg"
