change image src

--- a/views/partials/waiting.ejs
+++ b/views/partials/waiting.ejs
@@ -7,7 +7,7 @@
   <div id="imagepizzawrapper">
     <img
       id="pizza"
-      src="/images/waitingPage/pizza1.jpg"
+      src="../../images/waitingPage/pizza1.jpg"
       alt="Person Eating Pizza"
     />
   </div>
