changing image src

--- a/views/partials/waiting.ejs
+++ b/views/partials/waiting.ejs
@@ -48,9 +48,9 @@
   function updatePizza() {
     pizzaImage = document.getElementById('pizza');
     if (pizzaImage.src.includes('pizza1.jpg')) {
-      pizzaImage.src = '/images/waitingPage/pizza2.jpg';
+      pizzaImage.src = '../../images/waitingPage/pizza2.jpg';
     } else {
-      pizzaImage.src = '/images/waitingPage/pizza1.jpg';
+      pizzaImage.src = '../../images/waitingPage/pizza1.jpg';
     }
   }
 
