--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,4 +12,5 @@
   <link rel="stylesheet" href="/css/styles.css" media="screen" />
   <link rel="stylesheet" href="/css/cards-styles.css" media="screen" />
   <link rel="icon" href="/images/site/icon_3.png" sizes="32x32" />
+  <script src="../../js/script.js"></script>
 </head>
