update src name for images

--- a/views/partials/waiting.ejs
+++ b/views/partials/waiting.ejs
@@ -7,7 +7,7 @@
   <div id="imagepizzawrapper">
     <img
       id="pizza"
-      src="../../images/waitingPage/pizza1.jpg"
+      src="/images/waiting-page/pizza1.jpg"
       alt="Person Eating Pizza"
     />
   </div>
@@ -48,9 +48,9 @@
   function updatePizza() {
     pizzaImage = document.getElementById('pizza');
     if (pizzaImage.src.includes('pizza1.jpg')) {
-      pizzaImage.src = '../../images/waitingPage/pizza2.jpg';
+      pizzaImage.src = '/images/waiting-page/pizza2.jpg';
     } else {
-      pizzaImage.src = '../../images/waitingPage/pizza1.jpg';
+      pizzaImage.src = '/images/waiting-page/pizza1.jpg';
     }
   }
 
