--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header class="bg-wite py-3 border-bottom shadow-sm">
   <div class="container d-flex justify-content-between align-items-center">
-      <a href="/" title="Return to home page"><img src="/images/site/logo_your_point_is_3.png" alt="Your Point Is Logo" class="img-fluid" style="max-height: 80px;"></a>
+      <a href="/" title="Return to home page"><img src="/images/site/logo.png" alt="Your Point Is Logo" class="img-fluid" style="max-height: 80px;"></a>
       <% if (loggedIn) {%>
         <div class="d-flex align-items-center"">
           <a class="btn btn-outline-primary me-2" href="/dashboard/">Dashboard</a>
