--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,7 +10,9 @@
     crossorigin="anonymous"
   />
   <link rel="stylesheet" href="/css/styles.css" media="screen" />
+  <link rel="stylesheet" href="/css/room-styles.css" media="screen" />
   <link rel="stylesheet" href="/css/cards-styles.css" media="screen" />
   <link rel="stylesheet" href="/css/waiting-styles.css" media="screen" />
+
   <link rel="icon" href="/images/site/icon_3.png" sizes="32x32" />
 </head>
